Closed
Bug 1324598
Opened 9 years ago
Closed 9 years ago
GENERATE_MIPMAP_HINT can't be queried in Core profiles
Categories
(Core :: Graphics: CanvasWebGL, defect, P1)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: jgilbert, Assigned: jgilbert)
Details
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
daoshengmu
:
review+
ethlin
:
review+
gchang
:
approval-mozilla-aurora+
gchang
:
approval-mozilla-beta+
|
Details |
No description provided.
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8820082 [details]
Bug 1324598 - GENERATE_MIPMAP_HINT isn't queriable in Core Profiles. -
https://reviewboard.mozilla.org/r/99608/#review100046
Attachment #8820082 -
Flags: review+
Comment 4•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8820082 [details]
Bug 1324598 - GENERATE_MIPMAP_HINT isn't queriable in Core Profiles. -
https://reviewboard.mozilla.org/r/99608/#review100076
Attachment #8820082 -
Flags: review?(dmu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/df8f3ce70e2f
GENERATE_MIPMAP_HINT isn't queriable in Core Profiles. - r=daoshengmu
Comment 6•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox53:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
| Assignee | ||
Comment 7•9 years ago
|
||
Comment on attachment 8820082 [details]
Bug 1324598 - GENERATE_MIPMAP_HINT isn't queriable in Core Profiles. -
Approval Request Comment
[Feature/Bug causing the regression]: webgl2
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:
Attachment #8820082 -
Flags: approval-mozilla-beta?
Attachment #8820082 -
Flags: approval-mozilla-aurora?
Updated•9 years ago
|
status-firefox51:
--- → affected
status-firefox52:
--- → affected
Comment 8•9 years ago
|
||
Comment on attachment 8820082 [details]
Bug 1324598 - GENERATE_MIPMAP_HINT isn't queriable in Core Profiles. -
Fix WebGL2 related issue. Beta51+ & Aurora52+. Should be in 51 beta 10.
Attachment #8820082 -
Flags: approval-mozilla-beta?
Attachment #8820082 -
Flags: approval-mozilla-beta+
Attachment #8820082 -
Flags: approval-mozilla-aurora?
Attachment #8820082 -
Flags: approval-mozilla-aurora+
Comment 9•9 years ago
|
||
Comment 10•9 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•