Bug 1324598 - GENERATE_MIPMAP_HINT isn't queriable in Core Profiles. - r=daoshengmu

MozReview-Commit-ID: 6Z2MPmeFqv